--- a/environment.yml
+++ b/environment.yml
@@ -5,6 +5,6 @@ channels:
   - defaults
 dependencies:
   - arcpy=2.7=py37_arcgispro_26810
-  - pandas=1.2.4=py37hd77b12b_0
+  - pandas
   - streamlit=0.81.1=pyhd8ed1ab_0
 prefix: C:\Users\alden.summerville\Anaconda3\envs\testarcpy
